--- a/app/src/main/res/layout-land/fragment_strokes.xml
+++ b/app/src/main/res/layout-land/fragment_strokes.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.wegielek.signalychinese.views.LearnStrokesCanvasView
+    <com.wegielek.signalychinese.views.MainLearnStrokesCanvasView
         android:id="@+id/learnStrokesCanvasView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,24 +19,28 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-    </com.wegielek.signalychinese.views.LearnStrokesCanvasView>
+    </com.wegielek.signalychinese.views.MainLearnStrokesCanvasView>
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/prevCharacter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/previous_character"
         app:layout_constraintBottom_toBottomOf="@+id/learnStrokesCanvasView"
         app:layout_constraintStart_toStartOf="@+id/learnStrokesCanvasView"
         app:srcCompat="@drawable/ic_arrow_back_default" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/nextCharacter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/next_character"
         app:layout_constraintBottom_toBottomOf="@+id/learnStrokesCanvasView"
         app:layout_constraintEnd_toEndOf="@+id/learnStrokesCanvasView"
         app:srcCompat="@drawable/ic_arrow_forward_default" />
@@ -47,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="1/2"
+        android:text="@string/placeholder_counter"
         android:textColor="@color/dark_mode_white"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/learnStrokesCanvasView"
@@ -59,24 +63,52 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:background="@drawable/btn_simple_black_ripple_border_bg"
-        android:paddingStart="0dp"
+        android:paddingStart="8dp"
         android:paddingTop="32dp"
-        android:paddingEnd="0dp"
+        android:paddingEnd="8dp"
         android:paddingBottom="32dp"
         android:text="@string/draw"
+        android:textColor="@color/dark_mode_white"
         app:layout_constraintBottom_toBottomOf="@+id/learnStrokesCanvasView"
         app:layout_constraintEnd_toStartOf="@+id/learnStrokesCanvasView"
         app:layout_constraintTop_toTopOf="@+id/learnStrokesCanvasView" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/restartBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/restartDrawBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:background="?attr/selectableItemBackground"
-        android:padding="8dp"
+        android:contentDescription="@string/reset_character"
+        android:padding="10dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="@+id/learnStrokesCanvasView"
         app:layout_constraintTop_toTopOf="@+id/learnStrokesCanvasView"
         app:srcCompat="@drawable/ic_replay_default" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/restartPresentBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/reset_character"
+        android:padding="10dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="@+id/learnStrokesCanvasView"
+        app:layout_constraintTop_toTopOf="@+id/learnStrokesCanvasView"
+        app:srcCompat="@drawable/ic_replay_default" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/searchCharBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/search_character"
+        android:padding="10dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/nextCharacter"
+        app:layout_constraintEnd_toEndOf="@+id/learnStrokesCanvasView"
+        app:srcCompat="@drawable/ic_search_default" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
