--- a/app/src/main/res/layout/rv_item_flash_group_list.xml
+++ b/app/src/main/res/layout/rv_item_flash_group_list.xml
@@ -25,7 +25,7 @@
             android:layout_marginStart="16dp"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
-            android:text="Textview"
+            android:text="@string/placeholder_text"
             android:textColor="@color/dark_mode_white"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/deleteFlashCardGroup"
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/delete_flashcard_group"
             android:padding="16dp"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +51,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="?attr/selectableItemBackground"
-            android:text="Pisanie"
+            android:text="@string/writing"
+            android:textColor="@color/dark_mode_white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/flashCardsBtn"
@@ -61,8 +63,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Fiszki"
             android:background="?attr/selectableItemBackground"
+            android:text="@string/flash_cards"
+            android:textColor="@color/dark_mode_white"
             app:layout_constraintEnd_toStartOf="@+id/writingBtn"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
