--- a/app/src/main/res/layout/rv_item_search_result_list.xml
+++ b/app/src/main/res/layout/rv_item_search_result_list.xml
@@ -22,7 +22,7 @@
             android:id="@+id/labelTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="XDDDDDDDD"
+            android:text="@string/placeholder_text"
             android:textColor="@color/greenish"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
             android:paddingTop="5dp"
-            android:text="XDDDDDDDD"
+            android:text="@string/placeholder_text"
             android:textColor="@color/pink"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:paddingTop="10dp"
-        android:text="XDDDDDDDD"
+        android:text="@string/placeholder_text"
         android:textColor="@color/dark_mode_white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
