--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,9 +21,12 @@
     <color name="greenish">#69BD6C</color>
     <color name="selection_color">#4CAF50</color>
     <color name="grid_color">#666666</color>
+    <color name="hint_color">#FFEB3B</color>
 
     <color name="button_grey_base">#181819</color>
     <color name="button_grey_ripple">#4F4F53</color>
+
+
 
     <color name="pink">#CDA6F3</color>
 
