--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -201,7 +201,7 @@
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
@@ -214,8 +214,8 @@
         android:layout_height="2dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:background="?android:attr/listDivider"
+        android:layout_marginBottom="16dp"
+        android:background="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/searchBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -245,6 +245,7 @@
         android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_camera_default"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -265,7 +266,7 @@
         android:layout_width="2dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:background="?android:attr/listDivider"
+        android:background="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/divider2"
         app:layout_constraintStart_toEndOf="@+id/learnBtn"
         app:layout_constraintTop_toBottomOf="@+id/divider" />
@@ -325,5 +326,27 @@
         app:layout_constraintBottom_toTopOf="@+id/charactersLoadingPb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/drawCharacterText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/draw_here"
+        android:textColor="@color/dark_mode_white"
+        app:layout_constraintBottom_toBottomOf="@+id/characterDrawCanvas"
+        app:layout_constraintEnd_toEndOf="@+id/characterDrawCanvas"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/characterDrawCanvas"
+        app:layout_constraintTop_toTopOf="@+id/characterDrawCanvas"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <Button
+        android:id="@+id/refreshBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/refresh"
+        app:layout_constraintBottom_toBottomOf="@+id/charactersLoadingPb"
+        app:layout_constraintEnd_toEndOf="@+id/charactersLoadingPb"
+        app:layout_constraintStart_toStartOf="@+id/charactersLoadingPb" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
