--- a/app/src/main/res/layout-land/fragment_flash_card.xml
+++ b/app/src/main/res/layout-land/fragment_flash_card.xml
@@ -59,6 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/gesture_plain"
         app:layout_constraintBottom_toBottomOf="@+id/cardBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,10 +100,11 @@
         android:id="@+id/nextBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:padding="11dp"
-        android:src="@drawable/ic_arrow_forward_default"
         android:background="@drawable/btn_simple_black_ripple_bg"
+        android:contentDescription="@string/next_flashcard"
+        android:padding="11dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_arrow_forward_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
