--- a/app/src/main/res/layout/activity_definition_word.xml
+++ b/app/src/main/res/layout/activity_definition_word.xml
@@ -36,7 +36,7 @@
         android:id="@+id/divider3"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="?android:attr/listDivider"
+        android:background="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:clickable="true"
-                    android:text="TextView"
+                    android:text="@string/placeholder_text"
                     android:textColor="@color/greenish"
                     android:textSize="28sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:clickable="true"
-                    android:text="TextView"
+                    android:text="@string/placeholder_text"
                     android:textColor="@color/greenish"
                     android:textSize="28sp"
                     app:layout_constraintStart_toEndOf="@+id/definition_characters_traditonal_tv"
@@ -99,7 +99,7 @@
                 android:layout_height="50dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/btn_grey_green_ripple_bg"
-                android:contentDescription="speak"
+                android:contentDescription="@string/speak"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_sound_default"
@@ -116,7 +116,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:clickable="true"
-                android:text="TextView"
+                android:text="@string/placeholder_text"
                 android:textColor="@color/pink"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
