--- a/app/src/main/res/layout/dialog_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet.xml
@@ -24,6 +24,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/add_collection"
         android:padding="8dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,15 +41,16 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/newCollectionDoneBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginEnd="16dp"
-                android:layout_weight="1"
+                android:background="@drawable/btn_simple_black_ripple_bg"
+                android:contentDescription="@string/new_collection_confirm"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/newCollectionInputLayout"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +64,9 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="8dp"
                 android:visibility="gone"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:hintEnabled="false"
                 app:layout_constraintEnd_toStartOf="@+id/newCollectionDoneBtn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bottomSheetGroupsRv">
@@ -70,9 +75,10 @@
                     android:id="@+id/newCollectionEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Nazwa kolekcji"
+                    android:hint="@string/new_collection"
                     android:textColor="@color/dark_mode_white"
-                    android:textColorHint="@color/grey" />
+                    android:textColorHint="@color/grey"
+                    android:textCursorDrawable="@null" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.recyclerview.widget.RecyclerView
