--- a/app/src/main/res/layout/fragment_flash_card.xml
+++ b/app/src/main/res/layout/fragment_flash_card.xml
@@ -88,7 +88,7 @@
         android:id="@+id/divider8"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
+        android:background="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/flipBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
