--- a/app/src/main/res/layout/rv_item_bottom_sheet_collection.xml
+++ b/app/src/main/res/layout/rv_item_bottom_sheet_collection.xml
@@ -12,9 +12,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="CheckBox"
-        android:textColor="@color/dark_mode_white"
         android:buttonTint="@color/selection_color"
+        android:padding="0dp"
+        android:text="@string/placeholder_text"
+        android:textColor="@color/dark_mode_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
