--- a/app/src/main/res/layout/rv_item_definition_list.xml
+++ b/app/src/main/res/layout/rv_item_definition_list.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:text="XDDDDDDDDDD"
+        android:text="@string/placeholder_text"
         android:textColor="@color/dark_mode_white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackgroundBorderless"
+        android:contentDescription="@string/word_popup"
         android:padding="16dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_more_default"
