--- a/app/src/main/res/layout/rv_item_hamburger_menu.xml
+++ b/app/src/main/res/layout/rv_item_hamburger_menu.xml
@@ -9,7 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="TextView"
+        android:text="@string/placeholder_text"
         android:textColor="@color/dark_mode_white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,7 +21,7 @@
         android:id="@+id/divider7"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
+        android:background="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
