--- a/app/src/main/res/menu/definition_word_menu.xml
+++ b/app/src/main/res/menu/definition_word_menu.xml
@@ -4,7 +4,7 @@
     <item android:id="@+id/add"
         android:icon="@drawable/ic_note_add_default"
         app:showAsAction="ifRoom"
-        android:title="Add" />
+        android:title="@string/add" />
     <item android:id="@+id/copy"
         android:icon="@drawable/ic_copy_default"
         app:showAsAction="ifRoom"
