--- a/app/src/main/res/menu/history_menu.xml
+++ b/app/src/main/res/menu/history_menu.xml
@@ -4,5 +4,5 @@
     <item android:id="@+id/trash"
         android:icon="@drawable/ic_delete_default"
         app:showAsAction="ifRoom"
-        android:title="Delete"/>
+        android:title="@string/delete"/>
 </menu>
