--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,7 +123,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@android:color/transparent"
-        android:contentDescription="Camera"
+        android:contentDescription="Confirm character"
         android:padding="5dp"
         android:scaleType="fitCenter"
         android:src="@drawable/selector_done_btn"
@@ -138,6 +138,7 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/charactersRv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -152,6 +153,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
+        android:background="@drawable/btn_characters_holder"
         app:layout_constraintBottom_toTopOf="@+id/drawBtn"
         app:layout_constraintEnd_toStartOf="@+id/doneBtn"
         app:layout_constraintStart_toStartOf="parent" />
@@ -286,6 +288,20 @@
         android:padding="8dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_mic_default"
+        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
+        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
+        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/eraseBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/selector_search_bg_btn"
+        android:contentDescription=""
+        android:padding="8dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_close_white"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
         app:layout_constraintTop_toTopOf="@+id/textInputLayout" />
