--- a/app/src/main/res/layout-land/activity_definition_word.xml
+++ b/app/src/main/res/layout-land/activity_definition_word.xml
@@ -29,9 +29,10 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="TextView"
+                android:text="@string/placeholder_text"
                 android:textColor="@color/greenish"
                 android:textSize="28sp"
+                android:contentDescription="@string/traditional"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -43,9 +44,10 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="TextView"
+                android:text="@string/placeholder_text"
                 android:textColor="@color/greenish"
                 android:textSize="28sp"
+                android:contentDescription="@string/simplified"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +60,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/btn_grey_green_ripple_bg"
-                android:contentDescription="speak"
+                android:contentDescription="@string/speak"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_sound_default"
@@ -73,7 +75,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="TextView"
+                android:text="@string/placeholder_text"
                 android:textColor="@color/pink"
                 android:textSize="28sp"
                 app:layout_constraintEnd_toEndOf="parent"
