--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -23,6 +23,10 @@
         android:id="@+id/historyRv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:padding="0dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
