--- a/app/src/main/res/layout/fragment_flash_card.xml
+++ b/app/src/main/res/layout/fragment_flash_card.xml
@@ -59,6 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/gesture_plane"
         app:layout_constraintBottom_toBottomOf="@+id/cardBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,6 +101,7 @@
         android:scaleType="fitXY"
         android:padding="11dp"
         android:src="@drawable/ic_arrow_forward_default"
+        android:contentDescription="@string/next_flashcard"
         android:background="@drawable/btn_simple_black_ripple_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -111,6 +113,7 @@
         android:scaleType="fitXY"
         android:padding="11dp"
         android:src="@drawable/ic_arrow_back_default"
+        android:contentDescription="@string/prev_flashcard"
         android:background="@drawable/btn_simple_black_ripple_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
